--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,29 @@ services:
       - "8080:8080"
     environment:
       ASPNETCORE_ENVIRONMENT: Development
+    networks:
+      - rabbitmq-net
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq-dotnet
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: securepassword
+      RABBITMQ_DEFAULT_VHOST: /
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+      - rabbitmq-logs:/var/log/rabbitmq
+    networks:
+      - rabbitmq-net
+
+volumes:
+  rabbitmq-data:
+  rabbitmq-logs:
+
+networks:
+  rabbitmq-net:
+    driver: bridge
