add connection to rabbitmq

--- a/src/RabbitmqDotnetSample.Api/appsettings.Development.json
+++ b/src/RabbitmqDotnetSample.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RabbitMQ": "amqp://localhost:5672"
+  },
+  "Secrets": {
+    "RabbitMQUserName": "admin",
+    "RabbitMQPassword": "securepassword"
   }
 }
