--- a/src/RabbitmqDotnetSample.Api/RabbitmqDotnetSample.Api.csproj
+++ b/src/RabbitmqDotnetSample.Api/RabbitmqDotnetSample.Api.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.16"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
