--- a/src/RabbitmqDotnetSample.Api/appsettings.Development.json
+++ b/src/RabbitmqDotnetSample.Api/appsettings.Development.json
@@ -6,10 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "RabbitMQ": "amqp://localhost:5672"
+    "RabbitMQ": "amqp://rabbitmq:5672"
   },
   "Secrets": {
     "RabbitMQUserName": "admin",
     "RabbitMQPassword": "securepassword"
-  }
+  },
+  "AllowedHosts": "*"
 }
